<resources>
    <string name="app_name">WanAnd_Kt</string>
    <string name="app_nickname_cn">玩Android_Kotlin版本</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jere Chen</string>
    <string name="nav_header_subtitle">jerechen11@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_view_drawer_open">drawer open</string>
    <string name="nav_view_drawer_close">drawer close</string>

    <string name="menu_home">主页</string>
    <string name="menu_project">项目</string>
    <string name="menu_we_chat">微信公众号</string>
    <string name="menu_knowledge_system">知识体系</string>
    <string name="menu_me">我的</string>
    <string name="menu_about_me">关于我</string>
    <string name="other_cn">其它</string>

    <string name="user_name_cn">用户名</string>
    <string name="my_favorite_cn">我的收藏</string>
    <string name="login_cn">登入</string>
    <string name="logout_cn">登出</string>
    <string name="register_cn">注册</string>
    <string name="password_cn">密码</string>
    <string name="repassword_cn">验证密码</string>
    <string name="personal_info_cn">我的信息</string>
    <string name="avatar_cn">头像</string>

    <string name="pls_input_right_username_password_cn">请输入正确的用户名与密码</string>
    <string name="pls_check_password">请检查密码是否对应</string>
    <string name="loading">Loading</string>
    <string name="loading_cn">加载中</string>
    <string name="is_load_all_data_cn">已加载完所有数据</string>

    <string name="login_successful_cn">登入成功</string>
    <string name="register_successful_cn">注册成功</string>

    <string name="quite_app_prompt">是否退出程序</string>
    <string name="yes_cn">是</string>
    <string name="no_cn">否</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="set_user_name_dialog_title_cn">请设置新的用户名</string>
    <string name="complete_cn">完成</string>
    <string name="pls_input_right_username">请输入正确的用户名</string>

    <string name="camera_cn">拍照</string>
    <string name="album_cn">相册</string>
    <string name="cancel_cn">取消</string>

    <string name="confirm_cn">确认</string>
    <string name="granted_permission">该功能依赖于该权限，请允许</string>

    <string name="article_list_cn">文章列表</string>
</resources>
