<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_complete_project"
            android:icon="@drawable/complete_project_icon"
            android:title="@string/menu_complete_project" />
        <item
            android:id="@+id/nav_we_chat"
            android:icon="@drawable/we_chat_icon"
            android:title="@string/menu_we_chat" />
        <item
            android:id="@+id/nav_knowledge_system"
            android:icon="@drawable/knowledge_system_icon"
            android:title="@string/menu_knowledge_system" />
        <item
            android:id="@+id/nav_me"
            android:icon="@drawable/me_icon"
            android:title="@string/menu_me" />
    </group>

    <item android:title="@string/other_cn">
        <menu>
            <item
                android:id="@+id/nav_about_me"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_about_me" />
        </menu>
    </item>

</menu>
