<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/bottom_nav_home"
            android:icon="@drawable/vector_drawable_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/bottom_nav_project"
            android:icon="@drawable/vector_drawable_project"
            android:title="@string/menu_project" />
        <item
            android:id="@+id/bottom_nav_we_chat"
            android:icon="@drawable/vector_drawable_wechat"
            android:title="@string/menu_we_chat" />
        <item
            android:id="@+id/bottom_nav_knowledge_tree"
            android:icon="@drawable/vector_drawable_knowledge_tree"
            android:title="@string/menu_knowledge_system" />
        <item
            android:id="@+id/bottom_nav_me"
            android:icon="@drawable/vector_drawable_me"
            android:title="@string/menu_me" />
    </group>
</menu>