<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/cameraTv"
        style="@style/selectDialogItemStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera_cn" />

    <TextView
        android:id="@+id/albumTv"
        style="@style/selectDialogItemStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/album_cn" />

    <TextView
        android:id="@+id/cancelTv"
        style="@style/selectDialogItemStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/cancel_cn" />

</LinearLayout>