<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    tools:context=".ui.me.MeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/portraitIv"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/user_name_cn"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/portraitIv"
            app:layout_constraintStart_toStartOf="@id/portraitIv"
            app:layout_constraintTop_toBottomOf="@id/portraitIv" />

        <View
            android:id="@+id/divideLineView"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/userNameTv" />

        <com.wanandroid.kotlin.ui.customview.MeListItem
            android:id="@+id/favoriteItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/divideLineView"
            app:meListIconReference="@drawable/vector_drawable_star"
            app:meListItemTitleText="@string/my_favorite_cn" />

        <com.wanandroid.kotlin.ui.customview.MeListItem
            android:id="@+id/loginInOutItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/favoriteItem"
            app:meListIconReference="@drawable/vector_drawable_login"
            app:meListItemTitleText="@string/login_cn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>